# lane

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
.lane/: repo.lane
demo/: config.json  example.ts
dogfood/: human-review-benchmark.md
skills/lane-orchestrate/: SKILL.md
skills/lane-orchestrate/agents/: openai.yaml
src/: cli.rs  cli_main.rs  demo.rs  lib.rs  main.rs  materialize.rs  mount_main.rs  projection.rs  repo_tests.rs  storage.rs  vfs.rs  vfs_tests.rs  virtual_exec.rs  winfsp_mount.rs
src/cli/: commands.rs  error.rs  human_review.rs  orchestrate.rs  output.rs  preview.rs  repo.rs  review.rs
src/core/: mod.rs  ops.rs  repo.rs  types.rs
src/storage/: atomic.rs  blobs.rs  doctor.rs  lock.rs  manifest.rs  paths.rs  serde_util.rs
src/ui/: compare.ts  main.tsx  styles.css
src/virtual_exec/: fs.rs  git.rs  mount.rs  nodes.rs  observer.rs  state.rs  support.rs  types.rs  worker.rs
tests/: benchmark_agent_pair.rs  benchmark_orchestration_wedge.rs  cli_conflicts.rs  cli_doctor.rs  cli_dogfood.rs  cli_exec.rs  cli_guards.rs  cli_orchestration.rs  lane_benchmark.rs  lane_cli.rs  lane_demo.rs  lane_file.rs  lane_projection.rs  lane_repo.rs  lane_vfs.rs  repo_engine.rs  storage_contract.rs  ui_compare.test.ts  virtual_exec_contract.rs
tests/bench_support/: mod.rs
tests/common/: mod.rs
